[package]
name = "wasm-bundle"
version = "0.1.0"
authors = ["Daiki Ueno <dueno@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmparser = "0.60.2"
leb128 = "0.2.4"
tar = "0.4"
tempfile = "3"
clap = "2.33.1"
